# loam

./: .claude  .claudeignore  .editorconfig  .gitattributes  .gitignore  .gitignore.jinja  .gitmodules  .graphifyignore  .mcp.json  .validation_passed  AGENTS.md  ARTIFACT_EVALUATION.md  ARTIFACT_REPRODUCE_CHANGES.md  CLAUDE.md  CLAUDE.md.jinja  CODEX_IMPLEMENTATION.md  CONTEXT.md.jinja  CONTRIBUTING.md  DESIGN.md.jinja  Dockerfile  GPT54EVALRUNPLN.md  GUIDE.md  HANDOFF-CODEX-REVIEW-HOOK.md  HANDOFF-GRAPHIFY-CONTEXT-OPT.md  HANDOFF-LE-GPT54-EVAL.md  HANDOFF-NAVIGATE-SKILL.md  HANDOFF-QWEN-DEEP-ANALYSIS.md  HANDOFF-dream-skill-improvement.md  HANDOFF-figure-consistency.md  HANDOFF.md  HANDOFF.md.jinja  HANDOVER.md  JSON_Schema_for_ParBench.md  LICENSE  PROJECT-BACKGROUND.md.jinja  ParBench_Presentation_March2026.pptx  ParBench_Speaking_Notes_March2026.md  README.md  README.md.jinja  RESULTS.md  (+30 more)
.claude/: .venv-name  MODEL_CONFIG_REFERENCE.md  settings.json  settings.json.bak-codex-hook
.codex/: config.toml
.github/: PAGES_SETUP.md
.planning/: .continue-here.md  HANDOFF.json  HANDOFF.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  S8-PREP-PLAN.md  STATE.md  config.json  session-s1-prompt.md  session-s2-prompt.md  session-s6-prompt.md  v1.0-MILESTONE-AUDIT.md
ParBench/: API_pairwise_coverage_matrix__counts_.csv  api_confusion_matrix_v2.xlsx  api_confusion_matrix_v3.xlsx  api_confusion_matrix_v4.xlsx  api_confusion_matrix_v5.xlsx  benchmarks_api_matrix_v2.xlsx  benchmarks_api_matrix_v3.xlsx  benchmarks_api_matrix_v4.xlsx  (+2 more)
docs/: COPIER.md  (+51 more)
(+7539 files in other folders)
