[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parbench"
version = "0.1.0"
description = "Benchmark suite for evaluating LLM-based parallel code translation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.20",
    "libclang>=18.1",
]

[project.optional-dependencies]
eval = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
analysis = [
    "matplotlib>=3.9",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]
all = [
    "parbench[eval,analysis,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["c_augmentation*", "harness*"]
